<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app1_btn"
        android:onClick="displayToast"
        android:text="@string/app1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app2_btn"
        android:onClick="displayToast"
        android:text="@string/app2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app3_btn"
        android:onClick="displayToast"
        android:text="@string/app3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app4_btn"
        android:onClick="displayToast"
        android:text="@string/app4_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app5_btn"
        android:onClick="displayToast"
        android:text="@string/app5_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/app6_btn"
        android:onClick="displayToast"
        android:text="@string/app6_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
